# jsonic

./: .flake8  pyproject.toml
examples/: echo.py  math.py
src/jsonic_rpc/: __init__.py
src/jsonic_rpc/_internal/: method_introspection.py  types.py
src/jsonic_rpc/_internal/abstractions/: di.py  exception_handling.py  exceptions.py  method.py  processor.py  router.py  serializing.py
src/jsonic_rpc/_internal/implementations/: exc_conigurations.py  processor.py  router.py  simple_di.py  simple_serializing.py
src/jsonic_rpc/integrations/: dishka.py
tests/integration/: test_basic.py
