[tool.poetry]
name = "jsonic_rpc"
version = "0.1.0"
description = "A simple library for building JSON-RPC 2.0 servers"
authors = ["daler-sz <zdaler014@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"


[tool.poetry.group.lint.dependencies]
mypy = "^1.8.0"
flake8 = "^7.0.0"
isort = "^5.13.2"
ruff = "^0.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
ignore_missing_imports = true


[tool.isort]
multi_line_output = 3
line_length = 120
include_trailing_comma = true
combine_as_imports = true
remove_redundant_aliases = true


[tool.ruff]
line-length = 120